--- a/packages/react-console/package.json
+++ b/packages/react-console/package.json
@@ -18,7 +18,7 @@
   "files": [
     "dist"
   ],
-  "devDependencies": {
+  "dependencies": {
     "@runmedev/renderers": "workspace:*"
   },
   "peerDependencies": {
