--- a/.github/workflows/app-tests.yaml
+++ b/.github/workflows/app-tests.yaml
@@ -1,4 +1,4 @@
-name: CUJ Tests
+name: app-tests
 
 on:
   pull_request:
@@ -18,7 +18,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  run-cuj-tests:
+  run-app-tests:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     env:
