Fix CUJ tests (#106)
## Summary
This PR hardens CUJ execution by moving from no-auth assumptions to an
authenticated OIDC flow backed by a local Go fake OIDC server, and
updates the CUJ harness to start the proper runner backend (`runme agent
serve`) so cell execution/output is verified end-to-end.

## What changed
- Added a local Go OIDC fake server at `testing/cuj-oidc-server.go`.
- Updated `app/test/browser/run-cuj-scenarios.ts` to:
- detect and start a real Runme backend (instead of static HTTP
fallback),
  - generate backend config with OIDC trust + IAM bindings,
  - start/manage the local OIDC service,
  - pass minted tokens into scenario env.
- Updated `app/test/browser/test-scenario-hello-world.ts` to:
  - seed browser auth (`localStorage["oidc-auth"]`) from CUJ tokens,
- assert executed output by reading persisted notebook cell outputs (not
only UI text),
  - shorten token lifetime usage and clear auth state at scenario end,
- add a short post-output wait so the walkthrough movie reliably
includes rendered output.
- Moved shared fake backend implementation to root `testing/` and
updated references/docs.
- Updated policy/docs:
- `app/AGENTS.md` and `docs-dev/architecture/testing.md` now explicitly
require test backend fakes to be implemented in Go and placed under
`testing/`.
- `app/test/browser/README.md` updated to reflect authenticated CUJ
behavior.
- Updated `app/test/browser/test-notebook-ui.sh` to remove no-auth
assumptions and added a TODO to migrate it to TypeScript/CUJ alignment.
- Updated `.github/workflows/app-tests.yaml` JWT payload decode step to
handle base64 padding robustly.

## Validation
- `CUJ_UPLOAD=false pnpm -C app run cuj:run`
- `runme run --ignore-pattern .worktrees build test`

Both pass with the changes in this PR.


Related to #69

---------

Signed-off-by: Jeremy lewi <jeremy@lewi.us>

--- a/.github/workflows/app-tests.yaml
+++ b/.github/workflows/app-tests.yaml
@@ -91,6 +91,11 @@ jobs:
         with:
           node-version: "20"
 
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.23.x"
+
       - name: Enable corepack
         shell: bash
         run: |
@@ -120,6 +125,14 @@ jobs:
           agent-browser --version
           agent-browser install
 
+      - name: Install Runme CLI
+        shell: bash
+        run: |
+          set -euo pipefail
+          npm install -g runme
+          runme --version
+          runme agent --help >/dev/null
+
       - name: Run CUJ orchestrator
         shell: bash
         env:
@@ -127,7 +140,6 @@ jobs:
           GOOGLE_OAUTH_ACCESS_TOKEN: ${{ steps.gcp_auth.outputs.access_token }}
           CUJ_MANAGE_SERVERS: "true"
           CUJ_FRONTEND_CMD: "pnpm run dev:app"
-          CUJ_BACKEND_CMD: "python3 -m http.server 9977"
           CUJ_UPLOAD: "true"
           CUJ_COMMENT: "false"
           CUJ_COMMENT_STRICT: "false"
