--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "@monaco-editor/react": "^4.7.0",
     "@openai/chatkit-react": "1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/themes": "^3.1.4",
     "@runmedev/renderers": "workspace:*",
     "@tailwindcss/vite": "^4.0.17",
