--- a/.github/workflows/app-tests.yaml
+++ b/.github/workflows/app-tests.yaml
@@ -145,6 +145,7 @@ jobs:
           CUJ_COMMENT_STRICT: "false"
           CUJ_STATUS_CHECK: "true"
           CUJ_STATUS_CONTEXT: "app-tests-pass"
+          CUJ_STATUS_SHA: ${{ github.event.pull_request.head.sha || github.sha }}
           CUJ_FAIL_ON_SCENARIO_FAILURE: "false"
           CUJ_ARTIFACT_BUCKET: "runme-dev-assets"
           CUJ_CMD_TIMEOUT_MS: "120000"
