refactor(app-config): normalize YAML via RuntimeAppConfigSchema
Signed-off-by: Jeremy lewi <jeremy@lewi.us>

--- a/app/.env
+++ b/app/.env
@@ -1,4 +1,4 @@
-# Runtime app configuration should come from /configs/app-config.yaml.
+# Runtime app configuration should come from /configs/app-configs.yaml.
 # __INITIAL_STATE__ bootstrap configuration is deprecated for new settings.
 # VITE_* values in this file are fallback defaults only.
 
