refactor(app-config): runtime YAML schema + documented precedence (#117)
## Motivation

This refactor makes app configuration runtime-driven and predictable,
which is required for upcoming Google Drive work and for PWA deployments
where the same built assets run in multiple environments.

Specifically, we want to:
- load deploy-specific settings from `/configs/app-configs.yaml` instead
of baking behavior into build-time env vars,
- standardize parsing/normalization of YAML into one typed schema,
- remove ambiguity around nullable/optional config values by using
concrete defaults,
- document that `window.__INITIAL_STATE__` is deprecated for new
configuration.

## What changed

- Consolidated config parsing and schema into
`app/src/lib/appConfig.ts`.
- Added `RuntimeAppConfig` + `RuntimeAppConfigSchema.fromUnknown(...)`
to normalize YAML into concrete defaults.
- Normalized OIDC and Google Drive fields (including
`clientID`/`clientId`, `discoveryURL`/`discoveryUrl`).
- Switched default config path constant to `/configs/app-configs.yaml`.
- Updated `.env` docs/comments to clarify these are fallback defaults
only.
- Added `docs-dev/architecture/configuration.md` documenting runtime
config pattern and precedence.

## Why this helps

- Enables test and dev environments to swap behavior by serving
different config files, without rebuilding frontend assets.
- Gives one source of truth for config shape and defaults.
- Reduces config drift and hidden precedence bugs as Drive features are
added.

---------

Signed-off-by: Jeremy lewi <jeremy@lewi.us>

--- a/app/.env
+++ b/app/.env
@@ -1,3 +1,7 @@
+# Runtime app configuration should come from /configs/app-configs.yaml.
+# __INITIAL_STATE__ bootstrap configuration is deprecated for new settings.
+# VITE_* values in this file are fallback defaults only.
+
 # Google OAuth credentials (required)
 VITE_OAUTH_CLIENT_ID="notavalidclientid"
 VITE_OAUTH_CLIENT_SECRET="notavalidclientsecret"
