--- a/app/.env.development
+++ b/app/.env.development
@@ -1,2 +1,6 @@
+# Runtime app configuration should come from /configs/app-configs.yaml.
+# __INITIAL_STATE__ bootstrap configuration is deprecated for new settings.
+# VITE_* values in this file are fallback defaults only.
+
 VITE_DEFAULT_AGENT_ENDPOINT=http://localhost:9977
 VITE_DEFAULT_RUNNER_ENDPOINT=ws://localhost:9977/ws
